# railway-observability-with-rust

./: Cargo.toml  Dockerfile
src/: main.rs
