[package]
name = "log_hello_world"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
env_logger = "0.11.5"
log = "0.4.22"
opentelemetry = "0.25.0"
opentelemetry-http = { version = "0.25.0", features = ["reqwest"] }
opentelemetry-otlp = { version = "0.25.0", features = ["http-json", "reqwest"] }
opentelemetry_sdk = { version = "0.25.0", features = ["rt-tokio"] }
reqwest = "0.12.8"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.26.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
